--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pinned-panel",
   "displayName": "Pinned Panel",
   "description": "Add separate panel for pinned files",
+  "repository": {
+	"type": "git",
+	"url": "https://github.com/ukyouz/VSCode-PinnedPanel/tree/main"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.54.0"
